# rust-2048

./: .gitignore  Cargo.toml  README.md
rust-2048/: Cargo.toml
rust-2048/src/: board.rs
src/: app.rs  board.rs  main.rs  number_renderer.rs  settings.rs  tile.rs
