[package]
name = "rust-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3"
rand = "0.3.7"
piston_window = "0.61.0"
pistoncore-sdl2_window = "0.38.0"
piston2d-opengl_graphics = "0.37.0"