[package]
name = "rust-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.79"
serde_json = "1.0.27"
serde_derive = "1.0.79"
rand = "0.3.7"
piston_window = "0.127.0"
pistoncore-sdl2_window = "0.68.0"
piston2d-opengl_graphics = "0.82.0"